# discord.py-masterclass

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  404.html  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  format-and-lint.yml
audio-playback/: index.html
checks/: index.html
cogs/: index.html
components-v2/: index.html
converters/: index.html
creating-a-bot/: index.html
custom-context/: index.html
docs/: audio-playback.md  checks.md  cogs.md  components-v2.md  converters.md  creating-a-bot.md  custom-context.md  embeds.md  error-handling.md  help-command.md  hybrid-commands.md  index.md  markdown-and-ansi.md  pagination.md  slash-commands.md  tasks.md  views.md
embeds/: index.html
error-handling/: index.html
examples/creating-a-bot/: main.py
examples/hot-reload/: main.py
examples/hot-reload/cogs/: super_cog.py
examples/hot-reload/cogs/sub_cogs/: sub_cog.py
examples/hybrid-commands/: main.py
examples/hybrid-commands/cogs/: general.py
examples/hybrid-commands/paginators/: button_paginator.py
examples/hybrid-commands/utils/: help.py
examples/hybrid-commands/views/: __init__.py
examples/markdow-and-ansi/: main.py
examples/slash-commands/: __init__.py  main.py
examples/slash-commands/cogs/: cog.py  groupcog.py
examples/slash-commands/paginators/: __init__.py  select_paginator.py
examples/slash-commands/utils/: help.py  tree.py
examples/smart-sync/: README.md  main.py  translations.sh  translator.py
examples/smart-sync/cogs/: cog.py  groupcog.py
examples/smart-sync/translations/locales/bg/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/cs/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/da/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/de/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/el/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/en_GB/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/en_US/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/es_ES/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/fi/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/fr/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/hi/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/hr/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/hu/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/id/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/it/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/ja/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/ko/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/lt/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/nl/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/no/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/pl/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/pt_BR/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/ro/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/ru/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/sv_SE/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/th/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/tr/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/uk/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/vi/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/zh_CN/LC_MESSAGES/: dpygt.po
examples/smart-sync/translations/locales/zh_TW/LC_MESSAGES/: dpygt.po
examples/smart-sync/utils/: __init__.py  translator.py  tree.py
examples/views/: main.py
examples/views/components_v2/: __init__.py  action_row.py  basic_view.py  container.py  media_gallery.py  sections.py  text_display.py
examples/views/paginators/: __init__.py  advanced_paginator.py  button_paginator.py  select_paginator.py
examples/views/views/: __init__.py
help-command/: index.html
hybrid-commands/: index.html
markdown-and-ansi/: index.html
overrides/: main.html
pagination/: index.html
search/: search_index.json
slash-commands/: index.html
tasks/: index.html
views/: index.html
