[project]
name = "discord-py-masterclass"
version = "0.1.0"
description = ""
authors = [{ name = "FallenDeity", email = "61227305+FallenDeity@users.noreply.github.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
dependencies = [
    "discord.py[voice]",
    "python-dotenv>=1.1.0,<2",
    "tabulate>=0.9.0,<0.10",
    "jishaku>=2.6.0,<3",
    "polib>=1.2.0,<2",
    "deep-translator>=1.11.4,<2",
    "humanfriendly>=10.0,<11",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "isort>=6.0.1,<7",
    "ruff>=0.11.7,<0.16",
    "pre-commit>=4.2.0,<5",
    "pyright>=1.1.400,<2",
    "mkdocs-material>=9.6.12,<10",
    "pygments>=2.19.1,<3",
    "mkdocs>=1.6.1,<2",
    "Pillow>=11.2.1,<12",
    "CairoSVG>=2.7.1,<3",
    "mkdocs-glightbox>=0.4.0,<0.5",
    "griffe>=1.7.3,<2",
    "mkdocstrings[python]>=0.29.1,<0.30",
]

[tool.uv]
package = false

[tool.uv.sources]
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", branch = "master" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"
reportImportCycles = false
reportPrivateUsage = false
reportPrivateImportUsage = false
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
